--- a/scripts/docker-compose.yaml
+++ b/scripts/docker-compose.yaml
@@ -1,113 +1,139 @@
-version: '3.8'
-
 services:
-  zookeeper:
-    image: confluentinc/cp-zookeeper:6.2.0
-    hostname: zookeeper-learn
-    container_name: zookeeper-learn
-    ports:
-      - "2181:2181"
-    environment:
-      ZOOKEEPER_CLIENT_PORT: 2181
-      ZOOKEEPER_TICK_TIME: 2000
-    networks:
-      - final_project_default
+    minio:
+        image: minio/minio:RELEASE.2022-11-08T05-27-07Z
+        command: server /data --console-address ":9001"
+        ports:
+            - "9001:9000"
+            - "9002:9001"
 
-  kafka:
-    image: confluentinc/cp-kafka:6.2.0
-    hostname: kafka-learn
-    container_name: kafka-learn
-    depends_on:
-      - zookeeper
-    ports:
-      - "9092:9092"
-      - "29092:29092"
-    environment:
-      KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper-learn:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka-learn:9092,PLAINTEXT_HOST://localhost:29092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-    networks:
-      - final_project_default
+    zookeeper:
+        image: wurstmeister/zookeeper:latest
+        ports:
+            - "2182:2181"
 
-  kafdrop:
-    image: obsidiandynamics/kafdrop:3.30.0
-    ports:
-      - "9003:9000"
-    environment:
-      KAFKA_BROKERCONNECT: kafka-learn:9092
-    depends_on:
-      - kafka
-    networks:
-      - final_project_default
+    course-kafka:
+        image: wurstmeister/kafka:2.13-2.8.1
+        environment:
+            KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://course-kafka:9092
+            KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
+            KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+        ports:
+            - "9092:9092"
+        depends_on:
+            - zookeeper
 
-  postgres:
-    image: postgres:13
-    container_name: final_project-postgres-1
-    environment:
-      POSTGRES_USER: shahar
-      POSTGRES_PASSWORD: 64478868
-      POSTGRES_DB: cryptodb
-    volumes:
-      - postgres-db-volume:/var/lib/postgresql/data
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
-    networks:
-      - final_project_default
+    kafdrop:
+        image: obsidiandynamics/kafdrop:3.30.0
+        ports:
+            - "9003:9000"
+        environment:
+            KAFKA_BROKERCONNECT: course-kafka:9092
+        depends_on:
+            - course-kafka
+            
+    trino:
+        image: ofrir119/trino:420
+        ports:
+            - "8080:8080"
+        
+    dev_env:
+        image: ofrir119/developer_env:spark340_ssh
+        ports:
+            - "22022:22"
+            - "8888:8888"
+            - "4040:4040"
+            - "4041:4041"
+            - "4042:4042"
+            
+    elasticsearch:
+        image: docker.elastic.co/elasticsearch/elasticsearch:7.13.2
+        ports:
+            - "9200:9200"
+        environment:
+            discovery.type: single-node
+            
+    kibana:
+        image: docker.elastic.co/kibana/kibana:7.13.2
+        ports:
+            - "5601:5601"
+        depends_on:
+            - elasticsearch
+            
+    postgres:
+        image: postgres:12
+        environment:
+            POSTGRES_USER: postgres
+            POSTGRES_PASSWORD: postgres
+            POSTGRES_DB: airflow
+            POSTGRES_PORT: 5432
+        ports:
+            - "5432:5432"
 
-  webserver:
-    image: apache/airflow:2.1.2
-    depends_on:
-      - postgres
-    environment:
-      AIRFLOW__CORE__EXECUTOR: LocalExecutor
-      AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql+psycopg2://shahar:64478868@postgres/cryptodb
-      AIRFLOW__CORE__FERNET_KEY: 'NEW_GENERATED_FERNET_KEY'
-      AIRFLOW__CORE__LOAD_EXAMPLES: 'False'
-    volumes:
-      - ./dags:/opt/airflow/dags
-    ports:
-      - "8081:8080"
-    command: webserver
-    networks:
-      - final_project_default
+    airflow-init:
+        image: apache/airflow:2.0.0
+        environment:
+            AIRFLOW__CORE__EXECUTOR: LocalExecutor
+            AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql+psycopg2://postgres:postgres@postgres:5432/airflow
+            AIRFLOW__CORE__FERNET_KEY: FB0o_zt4e3Ziq3LdUUO7F2Z95cvFFx16hU8jTeR1ASM=
+            AIRFLOW__CORE__LOAD_EXAMPLES: False
+            AIRFLOW__CORE__LOGGING_LEVEL: INFO
+        volumes:
+            - ./dags:/opt/airflow/dags
+            - ./airflow-data/logs:/opt/airflow/logs
+            - ./airflow-data/plugins:/opt/airflow/plugins
+            - ./airflow-data/airflow.cfg:/opt/airlfow/airflow.cfg
+        depends_on:
+            - postgres
+        container_name: airflow_init
+        entrypoint: /bin/bash
+        command:
+            - -c
+            - airflow users list || ( airflow db init &&
+                airflow users create
+                --role Admin
+                --username airflow
+                --password airflow
+                --email airflow@airflow.com
+                --firstname airflow
+                --lastname airflow )
+        restart: on-failure
 
-  scheduler:
-    image: apache/airflow:2.1.2
-    depends_on:
-      - webserver
-    environment:
-      AIRFLOW__CORE__EXECUTOR: LocalExecutor
-      AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql+psycopg2://shahar:64478868@postgres/cryptodb
-      AIRFLOW__CORE__FERNET_KEY: 'NEW_GENERATED_FERNET_KEY'
-      AIRFLOW__CORE__LOAD_EXAMPLES: 'False'
-    volumes:
-      - ./dags:/opt/airflow/dags
-    command: scheduler
-    networks:
-      - final_project_default
+    airflow-webserver:
+        image: apache/airflow:2.0.0
+        environment:
+            AIRFLOW__CORE__EXECUTOR: LocalExecutor
+            AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql+psycopg2://postgres:postgres@postgres:5432/airflow
+            AIRFLOW__CORE__FERNET_KEY: FB0o_zt4e3Ziq3LdUUO7F2Z95cvFFx16hU8jTeR1ASM=
+            AIRFLOW__CORE__LOAD_EXAMPLES: False
+            AIRFLOW__CORE__LOGGING_LEVEL: INFO
+        volumes:
+            - ./dags:/opt/airflow/dags
+            - ./airflow-data/logs:/opt/airflow/logs
+            - ./airflow-data/plugins:/opt/airflow/plugins
+            - ./airflow-data/airflow.cfg:/opt/airlfow/airflow.cfg
+        depends_on:
+            - postgres
+        command: airflow webserver
+        ports:
+            - "8082:8080"
+        container_name: airflow_webserver
+        restart: always
 
-  spark:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: spark-env-new
-    volumes:
-      - .:/workspace
-    ports:
-      - "4040:4040"
-      - "8888:8888"
-    environment:
-      HADOOP_HOME: /opt/hadoop
-      SPARK_HOME: /usr/local/spark
-      PATH: /usr/local/spark/bin:$PATH
-    networks:
-      - final_project_default
-
-volumes:
-  postgres-db-volume:
-
-networks:
-  final_project_default:
-    driver: bridge
+    airflow-scheduler:
+        image: apache/airflow:2.0.0
+        environment:
+            AIRFLOW__CORE__EXECUTOR: LocalExecutor
+            AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql+psycopg2://postgres:postgres@postgres:5432/airflow
+            AIRFLOW__CORE__FERNET_KEY: FB0o_zt4e3Ziq3LdUUO7F2Z95cvFFx16hU8jTeR1ASM=
+            AIRFLOW__CORE__LOAD_EXAMPLES: False
+            AIRFLOW__CORE__LOGGING_LEVEL: INFO
+        volumes:
+            - ./dags:/opt/airflow/dags
+            - ./airflow-data/logs:/opt/airflow/logs
+            - ./airflow-data/plugins:/opt/airflow/plugins
+            - ./airflow-data/airflow.cfg:/opt/airlfow/airflow.cfg
+        depends_on:
+            - postgres
+        command: airflow scheduler
+        container_name: airflow_scheduler
+        restart: always
